refactor: List.get(0) → getFirst()로 교체 및 불필요한 Mock 제거
- Order.isAllItemsFullCancelable, OrderTest, OrderServiceTest에서 list.get(0)을 Java 21 list.getFirst()로 통일
- OrderServiceTest에서 사용하지 않는 OrderItemRepository, OrderCancelProcessor @Mock 선언 제거
- OrderTest에서 미사용 LocalDateTime 변수 제거